force-app/main/default/objects/custom_create261__c/custom_create261__c.object-meta.xml
<CustomObject>
    <label>Custom created object261</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects261</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>