force-app/main/default/objects/custom_create261__c/fields/custom_create_261field538__c.field-meta.xml
<CustomField>
    <fullName>custom_create_261field538__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 261field538</label>
    <type>Checkbox</type>
</CustomField>